2004-12-03 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelWriteConvert.[h|cxx] : new class to write datas (and in the
     future, with convertion)
   * src/gdcmFile.[h|cxx] : the PixelWriteConverter instance replace Pixel_Data
     and ImageDataSize values. Remove the method to get the PixelReadConverter
     from the output of the class

2004-12-03 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Rename src/gdcmPixelConvert.[h|cxx] to src/gdcmPixelReadConvert.[h|cxx]

2004-12-02 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.cxx : correct error in vtkDebugMacro, vtkWarningMacro
     and vtkErrorMacro use.
   * gdcmPython/gdcm.i : corrections to avoid warnings at compilation

2004-12-02 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/TestCopyDicom.cxx : the new dicom created is created empty, without
     file name in input
   * src/gdcmSeqEntry.cxx : bug fix in destruction of an element
   * src/gdcmHeader.cxx : bug fix. Keep the string, otherwise it is destroyed.
     The string leaves only in the fonction. So when we make a .c_str(), we
     get the pointeur on the first element, element that will be destroyed 
     immediately after thee instruction.
   * src/gdcmDocument.cxx : remove memory leaks. Bug fix when testing if the
     file has been opened : the test must be made on the content of the 
     pointer and not directly on the pointer !
     Code formatting

2004-12-02 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmPython/gdcm.i : change gdcmHeaderHelper to gdcmSerieHeader. Now,
     the python part recompiles

2004-11-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicom.cxx : Change the test to only open one vtkImageViewer.
     Otherwise, under linux (Graphic card : NVidia / SE : FedoraCore 1) the
     X session is killed (for my computer... it seems to not be identic on
     all linux)
